# napari-roxas-ai

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_roxas_ai/: __init__.py  _file_dialog_widget.py  napari.yaml
src/napari_roxas_ai/_assets_files/: __init__.py  _assets_dowloader.py
src/napari_roxas_ai/_conversion/: __init__.py  _cells_vectorization_widget.py
src/napari_roxas_ai/_crossdating/: __init__.py  _cross_dating_plotter.py
src/napari_roxas_ai/_edition/: __init__.py  _cells_layer_editor.py  _rings_layer_editor.py  _sample_metadata_update.py
src/napari_roxas_ai/_loading/: __init__.py  _samples_loader_widget.py  _samples_loading_widget.py
src/napari_roxas_ai/_measurements/: __init__.py  _batch_sample_measurements.py  _cells_measurements_widget.py  _cwt_measurements.py  _rings_measurements.py  _rings_measurements_widget.py  _sample_measurer.py  _single_sample_measurements.py  clusters_measurements.py  cwt_measurements  rings_measurements.py
src/napari_roxas_ai/_models/: __init__.py  _cells_model.py  _cells_model_batch_widget.py  _cells_model_single_widget.py  _cells_model_widget.py
src/napari_roxas_ai/_models/_weights/: conifer_cells_segmentation.pth
src/napari_roxas_ai/_preparation/: __init__.py  _crossdating_handler.py  _file_overwrite_dialog.py  _metadata_dialog.py  _preparation_widget.py  _worker.py
src/napari_roxas_ai/_project_directory/: __init__.py  _project_directory_dialog.py  _project_directory_setting_widget.py
src/napari_roxas_ai/_reader/: __init__.py  _crossdating_reader.py  _reader.py
src/napari_roxas_ai/_sample_data/: __init__.py  _data_loader.py
src/napari_roxas_ai/_sample_data/conifer/: conifer_sample.cells.txt  conifer_sample.metadata.json  conifer_sample.rings_table.txt
src/napari_roxas_ai/_sample_data/sample_data/conifer_sample/: conifer_sample.cells_table.txt  conifer_sample.metadata.json
src/napari_roxas_ai/_saving/: __init__.py  _samples_saving_widget.py
src/napari_roxas_ai/_segmentation/: __init__.py  _batch_sample_segmentation.py  _cells_model.py  _model_files_check.py  _single_sample_segmentation.py
src/napari_roxas_ai/_segmentation/_models/_rings/: linear_rings_model.pth
src/napari_roxas_ai/_settings/: __init__.py  _settings_manager.py  settings.json
src/napari_roxas_ai/_tests/: conftest.py  test_cells_model.py  test_cells_vectorization_widget.py  test_crossdating_reader.py  test_cwt_measurements.py  test_preparation.py  test_reader.py  test_sample_data.py  test_segmentation.py  test_writer.py
src/napari_roxas_ai/_utils/: __init__.py  _callback_manager.py  _colormap_utils.py  _scl_utils.py
src/napari_roxas_ai/_writer/: __init__.py  _writer.py
